// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<utils.ts> > <getUserFromDb> > !username || !password > message: Data missing 1`] = `
{
  "message": "Data missing",
  "ok": false,
  "provider": "",
}
`;

exports[`<utils.ts> > <getUserFromDb> > User does not exist > message: User not found 1`] = `
{
  "message": "User not found",
  "ok": false,
  "provider": "",
}
`;

exports[`<utils.ts> > <getUserFromDb> > User exists && password = null > message: This account uses <Provider> authentication 1`] = `
{
  "message": "This account uses Google authentication.",
  "ok": false,
  "provider": "Google",
}
`;

exports[`<utils.ts> > <getUserFromDb> > User exists > Password === Hashed Password 1`] = `
{
  "email": "john@doe.com",
  "id": "1",
  "message": "",
  "name": "John Doe",
  "ok": true,
  "role": "user",
  "username": "John Doe",
}
`;

exports[`<utils.ts> > <getUserFromDb> > User exists > PostgreSQL Response 1`] = `
{
  "email": "john@doe.com",
  "id": "1",
  "message": "",
  "name": "John Doe",
  "ok": true,
  "role": "user",
  "username": "John Doe",
}
`;

exports[`<utils.ts> > getUserFromDb > !username || !password > message: Data missing 1`] = `
{
  "message": "Data missing",
  "ok": false,
  "provider": "",
}
`;

exports[`<utils.ts> > getUserFromDb > User does not exist > message: User not found 1`] = `
{
  "message": "User not found",
  "ok": false,
  "provider": "",
}
`;

exports[`<utils.ts> > getUserFromDb > User exists && password = null > message: This account uses <Provider> authentication 1`] = `
{
  "message": "This account uses Google authentication.",
  "ok": false,
  "provider": "Google",
}
`;

exports[`<utils.ts> > getUserFromDb > User exists > Password === Hashed Password 1`] = `
{
  "email": "john@doe.com",
  "id": "1",
  "message": "",
  "name": "John Doe",
  "ok": true,
  "role": "user",
  "username": "John Doe",
}
`;

exports[`<utils.ts> > getUserFromDb > User exists > PostgreSQL Response 1`] = `
{
  "email": "john@doe.com",
  "id": "1",
  "message": "",
  "name": "John Doe",
  "ok": true,
  "role": "user",
  "username": "John Doe",
}
`;

exports[`<utils.ts> > getUserFromDb() > !username || !password > message: Data missing 1`] = `
{
  "message": "Data missing",
  "ok": false,
  "provider": "",
}
`;

exports[`<utils.ts> > getUserFromDb() > Checks if user exists > Password === Hashed Password 1`] = `
{
  "email": "john@doe.com",
  "id": "1",
  "message": "",
  "name": "John Doe",
  "ok": true,
  "role": "user",
  "username": "John Doe",
}
`;

exports[`<utils.ts> > getUserFromDb() > Checks if user exists > PostgreSQL 1`] = `
{
  "email": "john@doe.com",
  "id": "1",
  "message": "",
  "name": "John Doe",
  "ok": true,
  "role": "user",
  "username": "John Doe",
}
`;

exports[`<utils.ts> > getUserFromDb() > Checks if user exists > PostgreSQL Response 1`] = `
{
  "email": "john@doe.com",
  "id": "1",
  "message": "",
  "name": "John Doe",
  "ok": true,
  "role": "user",
  "username": "John Doe",
}
`;

exports[`<utils.ts> > getUserFromDb() > Checks if user exists > Queries PostgreSQL 1`] = `
{
  "email": "john@doe.com",
  "id": "1",
  "message": "",
  "name": "John Doe",
  "ok": true,
  "role": "user",
  "username": "John Doe",
}
`;

exports[`<utils.ts> > getUserFromDb() > Checks if user exists... > Password === Hashed Password 1`] = `
{
  "email": "john@doe.com",
  "id": "1",
  "message": "",
  "name": "John Doe",
  "ok": true,
  "role": "user",
  "username": "John Doe",
}
`;

exports[`<utils.ts> > getUserFromDb() > Checks if user exists... > Queries PostgreSQL 1`] = `
{
  "email": "john@doe.com",
  "id": "1",
  "message": "",
  "name": "John Doe",
  "ok": true,
  "role": "user",
  "username": "John Doe",
}
`;

exports[`<utils.ts> > getUserFromDb() > Checks if user exists... > Receives PostgreSQL 1`] = `
{
  "email": "john@doe.com",
  "id": "1",
  "message": "",
  "name": "John Doe",
  "ok": true,
  "role": "user",
  "username": "John Doe",
}
`;

exports[`<utils.ts> > getUserFromDb() > Checks if user exists... > Receives PostgreSQL response 1`] = `
{
  "email": "john@doe.com",
  "id": "1",
  "message": "",
  "name": "John Doe",
  "ok": true,
  "role": "user",
  "username": "John Doe",
}
`;

exports[`<utils.ts> > getUserFromDb() > Checks if user exists... > Verifies password 1`] = `
{
  "email": "john@doe.com",
  "id": "1",
  "message": "",
  "name": "John Doe",
  "ok": true,
  "role": "user",
  "username": "John Doe",
}
`;

exports[`<utils.ts> > getUserFromDb() > Checks if user exists... > Verifies password against hashed password 1`] = `
{
  "email": "john@doe.com",
  "id": "1",
  "message": "",
  "name": "John Doe",
  "ok": true,
  "role": "user",
  "username": "John Doe",
}
`;

exports[`<utils.ts> > getUserFromDb() > Checks if user exists... > Verifies password against hashed password... 1`] = `
{
  "email": "john@doe.com",
  "id": "1",
  "message": "",
  "name": "John Doe",
  "ok": true,
  "role": "user",
  "username": "John Doe",
}
`;

exports[`<utils.ts> > getUserFromDb() > Checks missing data > If missing, returns message 1`] = `
{
  "message": "Data missing",
  "ok": false,
  "provider": "",
}
`;

exports[`<utils.ts> > getUserFromDb() > Checks missing data > message: Data missing 1`] = `
{
  "message": "Data missing",
  "ok": false,
  "provider": "",
}
`;

exports[`<utils.ts> > getUserFromDb() > Checks missing data... > If missing, returns message 1`] = `
{
  "message": "Data missing",
  "ok": false,
  "provider": "",
}
`;

exports[`<utils.ts> > getUserFromDb() > If user does NOT exist... > If not found, returns message 1`] = `
{
  "message": "User not found",
  "ok": false,
  "provider": "",
}
`;

exports[`<utils.ts> > getUserFromDb() > If user does NOT exist... > Returns message 1`] = `
{
  "message": "User not found",
  "ok": false,
  "provider": "",
}
`;

exports[`<utils.ts> > getUserFromDb() > If user does NOT exist... > message: User not found 1`] = `
{
  "message": "User not found",
  "ok": false,
  "provider": "",
}
`;

exports[`<utils.ts> > getUserFromDb() > If user exists BUT password > message: This account uses <Provider> authentication 1`] = `
{
  "message": "This account uses Google authentication.",
  "ok": false,
  "provider": "Google",
}
`;

exports[`<utils.ts> > getUserFromDb() > If user exists BUT password is null... > Returns message and the external provider (Google | Facebook) 1`] = `
{
  "message": "This account uses Google authentication.",
  "ok": false,
  "provider": "Google",
}
`;

exports[`<utils.ts> > getUserFromDb() > If user exists BUT password is null... > message: This account uses <Provider> authentication 1`] = `
{
  "message": "This account uses Google authentication.",
  "ok": false,
  "provider": "Google",
}
`;

exports[`<utils.ts> > getUserFromDb() > If user exists... > Fetches user data from database 1`] = `
{
  "email": "john@doe.com",
  "id": "1",
  "message": "",
  "name": "John Doe",
  "ok": true,
  "role": "user",
  "username": "John Doe",
}
`;

exports[`<utils.ts> > getUserFromDb() > If user exists... > Receives PostgreSQL response 1`] = `
{
  "email": "john@doe.com",
  "id": "1",
  "message": "",
  "name": "John Doe",
  "ok": true,
  "role": "user",
  "username": "John Doe",
}
`;

exports[`<utils.ts> > getUserFromDb() > If user exists... > Verifies password against hashed password 1`] = `
{
  "email": "john@doe.com",
  "id": "1",
  "message": "",
  "name": "John Doe",
  "ok": true,
  "role": "user",
  "username": "John Doe",
}
`;

exports[`<utils.ts> > getUserFromDb() > User does not exist > message: User not found 1`] = `
{
  "message": "User not found",
  "ok": false,
  "provider": "",
}
`;

exports[`<utils.ts> > getUserFromDb() > User exists && password = null > message: This account uses <Provider> authentication 1`] = `
{
  "message": "This account uses Google authentication.",
  "ok": false,
  "provider": "Google",
}
`;

exports[`<utils.ts> > getUserFromDb() > User exists > Password === Hashed Password 1`] = `
{
  "email": "john@doe.com",
  "id": "1",
  "message": "",
  "name": "John Doe",
  "ok": true,
  "role": "user",
  "username": "John Doe",
}
`;

exports[`<utils.ts> > getUserFromDb() > User exists > PostgreSQL Response 1`] = `
{
  "email": "john@doe.com",
  "id": "1",
  "message": "",
  "name": "John Doe",
  "ok": true,
  "role": "user",
  "username": "John Doe",
}
`;
